# keep-screen-alive

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: autolabel.yml  ci.yml  draft.yml  publish.yml
keep_alive/: _dbus_inhibit.py  backends.py  config.py  dbus_inhibit.py  rules.py  run.py
tests/: test_backends.py  test_cli.py  test_config.py  test_rules.py  test_smoke.py
