[tool.poetry]
name = "keep-screen-alive"
version = "0.0.4"
description = "A thin wrapper around macos caffeinate to use a relative datetime"
authors = ["Tim Willis"]
license = "MIT"
readme = "README.md"
packages = [{include = "keep_alive"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.11"
dateparser = "^1.1.8"

[tool.poetry.scripts]
keep-alive = "keep_alive.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
