[tool.poetry]
name = "keep-screen-alive"
version = "0.1.1"
description = "A cross-platform tool to keep your screen awake using a relative datetime"
authors = ["Tim Willis"]
license = "MIT"
readme = "README.md"
packages = [{include = "keep_alive"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.11"
dateparser = "^1.1.8"
six = "^1.16.0"

[tool.poetry.scripts]
keep-alive = "keep_alive.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
