[tool.poetry]
name = "keep-screen-alive"
version = "0.2.1"
description = "A cross-platform tool to keep your screen awake using a relative datetime"
authors = ["Tim Willis"]
license = "MIT"
readme = "README.md"
packages = [{include = "keep_alive"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.11"
dateparser = "^1.1.8"
six = "^1.16.0"
PyGObject = {version = ">=3.42", markers = "sys_platform == 'linux'", optional = true}

[tool.poetry.extras]
dbus = ["PyGObject"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
ruff = "^0.15.22"

[tool.poetry.scripts]
keep-alive = "keep_alive.run:main"
dbus-inhibit = "keep_alive.dbus_inhibit:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
